tests/cases/compiler/cannotInvokeNewOnIndexExpression/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/cannotInvokeNewOnIndexExpression.ts`, Apache-2.0 License

var test: any[] = new any[1];
//~^ ERROR: Cannot find name 'any'.